--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -1,21 +1,24 @@
 template(name='comments')
-    .ui.grey.header
-        //- i.chat.icon
-        +i name='chat'
-        |comments
-    if currentUser
-        .ui.fluid.icon.input
-            i.plus.icon
-            input.add_comment(model='text' placeholder='add...')
-    .ui.comments
-        each doc_comments
-            .comment
-                .content
-                    .header #{body}
-                    .meta #{when}
-                    .actions
-                        +voting
-                        +remove_button
+    .ui.fluid.accordion
+        .active.title
+            .ui.grey.header
+                //- i.chat.icon
+                +i name='chat'
+                |comments
+        .active.content
+            if currentUser
+                .ui.fluid.icon.input
+                    i.plus.icon
+                    input.add_comment(model='text' placeholder='add...')
+            .ui.comments
+                each doc_comments
+                    .comment
+                        .content
+                            .header #{body}
+                            .meta #{when}
+                            .actions
+                                +voting
+                                +remove_button
 
 
 template(name='goto_model')
