--- a/client/kiosk.jade
+++ b/client/kiosk.jade
@@ -103,7 +103,8 @@ template(name='healthclub_session')
                         .ui.big.basic.fluid.button.toggle_adding_guest 
                             i.plus.large.icon
                             |guest
-                    +user_check_steps                
+                    if is_admin 
+                        +user_check_steps                
                     +email_validation_check user
                     +lease_expiration_check user
                     with user
