--- a/client/shop.jade
+++ b/client/shop.jade
@@ -1,19 +1,39 @@
 template(name='shop')
     .ui.stackable.padded.grid
-        .four.wide.column
+        .three.wide.column
             .ui.header 
                 +i name='shop'
                 |shop
-        .twelve.wide.column
-            .ui.four.cards
+        .thirteen.wide.column
+            .ui.three.cards
                 each products
                     .ui.card
-                        img.ui.centered.rounded.image(src="{{c.url picture width=300 height=200 crop='fit'}}")
+                        a(href="/shop/#{_id}/view")
+                            img.ui.centered.rounded.image(src="{{c.url picture width=300 height=200 crop='fit'}}")
                         .content 
                             .header #{title}
                             .smallscroll
                                 |!{description}
-                
+                            +add_to_tab
+                            a.ui.basic.icon.button(href="/shop/#{_id}/view")
+                                +i name='chevron right' classes='ui mini image'
+                            if can_edit
+                                a.ui.basic.button(href="/shop/#{_id}/edit")
+                                    +i name='pencil' classes='ui mini image'
+
+template(name='add_to_tab')
+    .ui.segment
+        .add_to_tab.ui.green.button
+            i.cart.plus.icon
+            |add to tab
+        if current_tab_additions
+            div current tab additions
+            .ui.list
+                each current_tab_additions
+                    .item
+                        |#{when}
+                        i.remove.link.icon.remove_tab_item
+
 
 
 template(name='shop_card')
@@ -91,10 +111,12 @@ template(name='shop_edit')
                 //- +array_edit key='location_tags' label='location tags' icon='marker' direct=true
                 //- +dollar_price_edit key='karma_price' icon='yin-yang' label='karma price' direct=true
                 +dollar_price_edit key='dollar_price' icon='money' label='dollar price' direct=true
+                +boolean_edit key='active' icon='clock' label='active' direct=true
+                +number_edit key='inventory' icon='move-by-trolley' label='inventory' direct=true
                 //- +date_edit key='date_available' icon='calendar' label='date available' direct=true
                 //- +time_edit key='time_available' icon='clock' label='time available' direct=true
-                +single_doc_edit key='shop_type' label='shop type'
-                +omega_edit model='shop_type'
+                //- +single_doc_edit key='shop_type' label='shop type'
+                //- +omega_edit model='shop_type'
                 
             .eight.wide.column
                 +image_edit key='picture' direct=true
@@ -141,10 +163,15 @@ template(name='shop_view')
         .ui.stackable.padded.grid
             //- img.ui.large.rounded.image(src="{{c.url image width=500 height=500 gravity='face' crop='fill'}}")
             .six.wide.column
-                img.ui.large.centered.rounded.image(src="{{c.url picture width=1000 height=400 crop='fit'}}")
-            .six.wide.column
                 .ui.header #{title}
+                img.ui.large.centered.rounded.image(src="{{c.url picture width=1000 height=400 crop='fit'}}")
                 +html_view key='description' direct=true
+                .ui.fluid.accordion
+                    .active.title
+                        .ui.header description analysis
+                    .active.content
+                        +watson_view
+            .six.wide.column
                 .ui.header author #{_author_username}
                 with _author_id
                     +user_card
@@ -153,6 +180,7 @@ template(name='shop_view')
                 +dollar_price_view key='dollar_price' icon='money' label='dollar price' direct=true
                 //- +karma_price_view key='karma_price' icon='yin-yang' label='karma price' direct=true
                 +date_view key='date_available' label='date available' icon='calendar' direct=true
+                +number_view key='inventory' label='inventory' icon='move-by-trolley' direct=true
                 +time_view key='time_available' label='time available' icon='clock' direct=true
                 +product_transactions
             .four.wide.column
