--- a/client/docs.jade
+++ b/client/docs.jade
@@ -31,10 +31,10 @@ template(name='cloud')
         //-     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
         // .ui.hidden.fitted.divider
     if selected_tags
-        #clear_tags.ui.blue.icon.button
+        #clear_tags.ui.active.icon.button
             i.remove.icon
         each selected_tags
-            .unselect_tag.ui.blue.button
+            .unselect_tag.ui.active.button
                 strong #{this}
     each all_tags
         .ui.basic.button.select_tag(class=cloud_tag_class) 
