--- a/client/tab.jade
+++ b/client/tab.jade
@@ -1,20 +1,20 @@
 template(name='tab')
     .ui.stackable.padded.grid
-        .four.wide.column
+        .three.wide.column
             .ui.header 
                 +i name='shopping-cart'
                 |tab
             .ui.statistic
                 .value $#{total_tab_cost}
                 .label tab total
-        .twelve.wide.column
+        .thirteen.wide.column
             each transactions
                 .ui.segment.cart_item.grid
                     .four.wide.column
                         img.ui.rounded.image(src="{{c.url referenced_product.picture width=1000 height=1000 gravity='face' crop='crop'}}")
                     .twelve.wide.column
                         a.ui.header(href="/shop/#{referenced_product._id}/view") #{referenced_product.title}
-                        .ui.inline.greyheader #{when}
+                        .ui.grey.small.header #{when}
                         .ui.inline.header $#{referenced_product.dollar_price}
                         div
                         if delivered
