--- a/components/transactions.jade
+++ b/components/transactions.jade
@@ -14,9 +14,53 @@ template(name='transactions')
             .ui.button.unpaid_transactions
                 +i name='no-hidden-fee' classes='ui avatar image' 
                 |unpaid transactions
-        .twelve.wide.column.scrolling
-            each transactions
-                +admin_transaction
+        .twelve.wide.column
+            .ui.header
+                +i name='move-by-trolley'
+                |undelivered transactions
+            .ui.fluid.styled.accordion
+                each undelivered_transactions
+                    .title
+                        img.ui.avatar.image(src="{{c.url referenced_product.picture width=200 height=200 crop='fit'}}")
+                        .ui.inline.small.grey.header #{referenced_product.title}
+                        .ui.inline.greyheader #{when}
+                    .content
+                        .ui.stackable.grid
+                            .four.wide.column
+                                img.ui.rounded.small.image(src="{{c.url referenced_product.picture width=1000 height=1000 gravity='face' crop='crop'}}")
+                            .twelve.wide.column
+                                .ui.header #{_author_username}
+                                +date_view key='pickup_date' label='pickup date' direct=true
+                                +time_view key='pickup_time' label='pickup time' direct=true
+                                +textarea_view key='transaction_notes' label='notes' direct=true
+                                +creation_info
+                                if is_admin
+                                    +boolean_edit key='delivered' direct=true
+                                if is_dev
+                                    +remove_button
+            .ui.header
+                +i name='shipped'
+                |delivered transactions
+            .ui.fluid.styled.accordion
+                each delivered_transactions
+                    .title
+                        img.ui.avatar.image(src="{{c.url referenced_product.picture width=200 height=200 crop='fit'}}")
+                        .ui.inline.small.grey.header #{referenced_product.title}
+                        .ui.inline.greyheader #{when}
+                    .content
+                        .ui.stackable.grid
+                            .four.wide.column
+                                img.ui.rounded.small.image(src="{{c.url referenced_product.picture width=1000 height=1000 gravity='face' crop='crop'}}")
+                            .twelve.wide.column
+                                .ui.header #{_author_username}
+                                +date_view key='pickup_date' label='pickup date' direct=true
+                                +time_view key='pickup_time' label='pickup time' direct=true
+                                +textarea_view key='transaction_notes' label='notes' direct=true
+                                +creation_info
+                                if is_admin
+                                    +boolean_view key='delivered' direct=true
+                                if is_dev
+                                    +remove_button
 
 
 
@@ -41,3 +85,79 @@ template(name='admin_transaction')
                     if is_dev
                         +remove_button
             
+
+
+template(name='my_transactions')
+    .ui.stackable.padded.grid
+        .four.wide.column
+            .ui.header 
+                +i name='cashbook'
+                |my transactions
+        .twelve.wide.column
+            .ui.header
+                +i name='move-by-trolley'
+                |undelivered transactions
+            .ui.styled.fluid.accordion
+                each undelivered_transactions
+                    .title 
+                        img.ui.avatar.image(src="{{c.url referenced_product.picture width=200 height=200 crop='fit'}}")
+                        .ui.inline.small.grey.header #{referenced_product.title}
+                        .ui.inline.greyheader #{when}
+                    .content
+                        .ui.stackable.grid
+                            .four.wide.column
+                                img.ui.rounded.image(src="{{c.url referenced_product.picture width=1000 height=1000 gravity='face' crop='crop'}}")
+                            .twelve.wide.column
+                                +date_view key='pickup_date' label='pickup date' direct=true
+                                +time_view key='pickup_time' label='pickup time' direct=true
+                                +textarea_view key='transaction_notes' label='notes' direct=true
+                                +creation_info
+                                if is_admin
+                                    +boolean_view key='delivered' direct=true
+                                if is_dev
+                                    +remove_button
+            .ui.header 
+                +i name='shipped'
+                |delivered transactions
+            .ui.styled.fluid.accordion
+                each delivered_transactions
+                    .title 
+                        img.ui.avatar.image(src="{{c.url referenced_product.picture width=200 height=200 crop='fit'}}")
+                        .ui.inline.small.grey.header #{referenced_product.title}
+                        .ui.inline.greyheader #{when}
+                    .content
+                        .ui.stackable.grid
+                            .four.wide.column
+                                img.ui.rounded.image(src="{{c.url referenced_product.picture width=1000 height=1000 gravity='face' crop='crop'}}")
+                            .twelve.wide.column
+                                +date_view key='pickup_date' label='pickup date' direct=true
+                                +time_view key='pickup_time' label='pickup time' direct=true
+                                +textarea_view key='transaction_notes' label='notes' direct=true
+                                +creation_info
+                                if is_admin
+                                    +boolean_view key='delivered' direct=true
+                                if is_dev
+                                    +remove_button
+
+                
+                
+template(name='transaction')
+    .ui.segment
+        .ui.accordion
+            .title
+                img.ui.avatar.image(src="{{c.url referenced_product.picture width=200 height=200 crop='fit'}}")
+                .ui.inline.header #{referenced_product.title}
+                .ui.inline.greyheader #{when}
+            .content
+                .ui.stackable.grid
+                    .four.wide.column
+                        img.ui.rounded.image(src="{{c.url referenced_product.picture width=1000 height=1000 gravity='face' crop='crop'}}")
+                    .twelve.wide.column
+                        +date_edit key='pickup_date' label='pickup date' direct=true
+                        +time_edit key='pickup_time' label='pickup time' direct=true
+                        +textarea_edit key='transaction_notes' label='notes' direct=true
+                        +creation_info
+                        if is_admin
+                            +boolean_edit key='delivered' direct=true
+                        if is_dev
+                            +remove_button
