--- a/client/fields.jade
+++ b/client/fields.jade
@@ -74,7 +74,7 @@ template(name='icon_view')
     if field_value
         div
         //- i.icon(class=field_value)
-        img(src="https://img.icons8.com/office/48/000000/#{field_value}.png")
+        img(src="https://img.icons8.com/color/48/000000/#{field_value}.png")
 
 
 template(name='i')
@@ -83,7 +83,7 @@ template(name='i')
     //- img(src="https://img.icons8.com/ultraviolet/48/000000/#{name}.png" class=classes title=title)
 
 template(name='ismall')
-    img(src="https://img.icons8.com/office/24/000000/#{name}.png" class=classes title=title)
+    img(src="https://img.icons8.com/color/24/000000/#{name}.png" class=classes title=title)
     //- img(src="https://img.icons8.com/ultraviolet/24/000000/#{name}.png" class=classes title=title)
 
 template(name='iblue')
