--- a/client/shop.jade
+++ b/client/shop.jade
@@ -4,8 +4,10 @@ template(name='shop')
             .ui.header 
                 +i name='shop'
                 |shop
+            .ui.fluid.button.add_item
+                i.plus.icon
+                |add item
             +cloud filter='shop'
-                
         .thirteen.wide.column
             .ui.three.cards
                 each products
@@ -39,72 +41,95 @@ template(name='add_to_tab')
 
 
 template(name='shop_card')
-    .ui.stackable.divided.grid
-        .centered.row
-            .sixteen.wide.column
-                a.pointer(href="/shop/#{_id}/view")
-                    img.ui.centered.rounded.image(src="{{c.url picture width=300 height=200 crop='fit'}}")
-        .row
-            .sixteen.wide.column
-                a.ui.small.grey.header(href="/shop/#{_id}/view") #{title}
-        .row
-            .sixteen.wide.column
-                //- +i name='tags' classes='ui mini inline image'
-                //- each tags
-                //-     .ui.basic.label #{this}
-                //- div
-                //- +i name='marker' classes='ui mini inline image'
-                //- each location_tags
-                //-     .ui.basic.label #{this}
-                //- .ui.basic.animated.fade.button.add_to_cart(title="#{karma_price} karma, click to add to cart")
-                //-     .visible.content
-                //-         .ui.header #{karma_price}k
-                //-     .hidden.content
-                //-         i.cart.plus.green.large.icon
-                .ui.header $#{dollar_price}
-                //- .ui.basic.animated.fade.button.add_to_cart(title="click to add to cart")
-                //-     .visible.content
-                //-         .ui.header 
-                //-             if dollar_price
-                //-                 |$#{dollar_price}
-                //-             else
-                //-                 |free
-                    .hidden.content
-                        i.cart.plus.green.large.icon
-                +number_view key='inventory' label='inventory' direct=true
-                a.ui.basic.icon.button(href="/shop/#{_id}/view")
-                    +i name='chevron right' classes='ui mini image'
-                if can_edit
-                    a.ui.basic.button(href="/shop/#{_id}/edit")
-                        +i name='pencil' classes='ui mini image'
-                    //- +edit_button
-
+    .ui.stackable.grid.segment
+        .four.wide.column
+            a.pointer(href="/shop/#{_id}/view")
+                img.ui.centered.rounded.image(src="{{c.url picture width=300 height=200 crop='fit'}}")
+        .eight.wide.column
+            a.ui.grey.header(href="/shop/#{_id}/view") #{title}
+            //- div
+            //- +i name='food' classes='ui mini inline image'
+            //- each ingredients
+            //-     .ui.basic.label #{this}
+            //- div
+            //- +i name='marker' classes='ui mini inline image'
+            //- each location_tags
+            //-     .ui.basic.label #{this}
+            //- .ui.basic.animated.fade.button.add_to_cart(title="#{karma_price} karma, click to add to cart")
+            //-     .visible.content
+            //-         .ui.header #{karma_price}k
+            //-     .hidden.content
+            //-         i.cart.plus.green.large.icon
+            .ui.inline.header $#{dollar_price}
+            //- .ui.basic.animated.fade.button.add_to_cart(title="click to add to cart")
+            //-     .visible.content
+            //-         .ui.header 
+            //-             if dollar_price
+            //-                 |$#{dollar_price}
+            //-             else
+            //-                 |free
+                .hidden.content
+                    i.cart.plus.green.large.icon
+            //- +number_viez
+            a.ui.basic.small.icon.button(href="/shop/#{_id}/view")
+                +i name='chevron right' classes='ui mini image'
+            if can_edit
+                a.ui.basic.small.icon.button(href="/shop/#{_id}/edit")
+                    +i name='pencil' classes='ui mini image'
+                //- +edit_button
+        .four.wide.column
+            with author
+                img.ui.avatar.image(src="{{c.url image_id width=200 height=200 crop='fit'}}")    
+                .ui.inline.header #{first_name} #{last_name}
+                .ui.header #{sales_amount} sales
+                .ui.header #{purchase_amount} purchases
+            
 
 template(name='shop_edit')
     with current_doc
         .ui.stackable.padded.grid
-            .eight.wide.column
-                a.ui.massive.basic.icon.button(href="/shop/#{_id}/view")
-                    i.big.green.checkmark.icon   
-                a.ui.massive.basic.icon.button(href="/m")
-                    i.big.red.remove.icon   
-                     
+            .six.wide.column
                 .ui.header #{title}
                 +text_edit key='title' icon='header' direct=true
                 +array_edit key='tags' icon='tags' direct=true
-                //- +array_edit key='location_tags' label='location tags' icon='marker' direct=true
-                //- +dollar_price_edit key='karma_price' icon='yin-yang' label='karma price' direct=true
+                +array_edit key='location_tags' label='location tags' icon='marker' direct=true
                 +dollar_price_edit key='dollar_price' icon='money' label='dollar price' direct=true
                 +boolean_edit key='active' icon='clock' label='active' direct=true
                 +number_edit key='inventory' icon='move-by-trolley' label='inventory' direct=true
-                //- +date_edit key='date_available' icon='calendar' label='date available' direct=true
-                //- +time_edit key='time_available' icon='clock' label='time available' direct=true
-                //- +single_doc_edit key='shop_type' label='shop type'
+                +date_edit key='date_available' icon='calendar' label='date available' direct=true
+                +time_edit key='time_available' icon='clock' label='time available' direct=true
+                +single_doc_edit key='shop_type' ref_model='shop_type' label='shop type' direct=true
                 //- +omega_edit model='shop_type'
-                
-            .eight.wide.column
+                if is_event
+                    .ui.header 
+                        +i name='calendar'
+                        |event
+                    +date_edit key='date' label='date' direct=true
+                    +time_edit key='start_time' label='start time' direct=true
+                    +time_edit key='end_time' label='end time' direct=true
+                else if is_service
+                    .ui.header service
+                    +number_edit key='hourly_rate' direct=true
+                else if is_product
+                    .ui.header product
+                    +boolean_edit key='rentable' direct=true
+                    unless rentable
+                        +boolean_edit key='food' direct=true
+                        if food
+                            +array_edit key='ingredients' direct=true
+                            +array_edit key='allergies' direct=true
+                    if rentable
+                        +number_edit key='hourly_rate' label='hourly rate' icon='time-span' direct=true
+                        +number_edit key='daily_rate' label='daily rate' icon='timetable' direct=true
+            .six.wide.column
                 +image_edit key='picture' direct=true
                 +html_edit key='description' direct=true
+            .two.wide.column
+                a.ui.massive.basic.icon.button(href="/shop/#{_id}/view")
+                    i.big.green.checkmark.icon   
+                .ui.massive.basic.icon.button.delete_shop_item
+                    i.big.red.remove.icon   
+                
 
 
         
@@ -114,41 +139,42 @@ template(name='shop_view')
     with current_doc
         .ui.stackable.padded.grid
             //- img.ui.large.rounded.image(src="{{c.url image width=500 height=500 gravity='face' crop='fill'}}")
-            .six.wide.column
-                .ui.center.aligend.large.header #{title}
-                img.ui.large.centered.rounded.image(src="{{c.url picture width=1000 height=400 crop='fit'}}")
-                +html_view key='description' direct=true
-                .ui.fluid.accordion
-                    .title
-                        .ui.header 
-                            +i name='development-skill'
-                            |description analysis
-                            i.dropdown.icon
-                    .content
-                        +watson_view
-            .six.wide.column
-                .ui.header added by #{_author_username}
-                with _author_id
-                    +user_card
-                +array_view key='tags' icon='tags' direct=true
-                //- +array_view key='location_tags' label='location tags' icon='marker' direct=true
-                +number_view key='inventory' label='inventory' icon='move-by-trolley' direct=true
-                +dollar_price_view key='dollar_price' icon='money' label='dollar price' direct=true
-                //- +karma_price_view key='karma_price' icon='yin-yang' label='karma price' direct=true
-                +date_view key='date_available' label='date available' icon='calendar' direct=true
-                +time_view key='time_available' label='time available' icon='clock' direct=true
-                +product_transactions
-            .four.wide.column
-                a.ui.large.icon.basic.button(href="/shop/#{_id}/edit")
-                    i.pencil.icon
-                //- +reservations
-                +comments
-                with current_doc
-                    +voting_full
-                    //- .ui.header similar shops
-                    //- .ui.header alerts
-                    //- |alergen alert
-                    //- |#{alergen_alert}
+            .row
+                .six.wide.column
+                    .ui.center.aligend.large.header #{title}
+                    .scrolling
+                        img.ui.large.centered.rounded.image(src="{{c.url picture width=1000 height=400 crop='fit'}}")
+                        +html_view key='description' direct=true
+                .six.wide.column
+                    .ui.header added by #{_author_username}
+                    |#{when}
+                    with _author_id
+                        +user_card
+                    +array_view key='tags' icon='tags' direct=true
+                    //- +array_view key='location_tags' label='location tags' icon='marker' direct=true
+                    +number_view key='inventory' label='inventory' icon='move-by-trolley' direct=true
+                    +dollar_price_view key='dollar_price' icon='money' label='dollar price' direct=true
+                    +date_view key='date_available' label='date available' icon='calendar' direct=true
+                    +time_view key='time_available' label='time available' icon='clock' direct=true
+                    +product_transactions
+                .four.wide.column
+                    a.ui.large.icon.basic.button(href="/shop/#{_id}/edit")
+                        +i name='pencil'
+                    //- +reservations
+                    +comments
+                    with current_doc
+                        +voting_full
+            .row
+                .twelve.wide.column
+                    if watson
+                        .ui.fluid.accordion
+                            .title
+                                .ui.header 
+                                    +i name='development-skill'
+                                    |description analysis
+                                    i.dropdown.icon
+                            .content
+                                +watson_view
 
 
 template(name='product_transactions')
